Fix equation tag overlapping in KaTeX
- Prevent equation numbers from overlapping equations

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -543,3 +543,24 @@ img.emoji {
     margin-left: $baseMargin;
   }
 }
+
+// Fixing issue where eqn numbers overlap with katex math
+//  https://github.com/KaTeX/KaTeX/issues/3066
+.katex-html {
+  overflow-x: auto;
+  overflow-y: hidden;
+  padding: 3px;
+  .base {
+    margin: 0 auto;
+  }
+}
+
+.katex-html:has(span.tag) {
+  display: flex !important;
+}
+
+.katex-display > .katex > .katex-html > .tag {
+  position: relative !important;
+  float: right;
+  margin-left: 0.25rem;
+}
